--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 	<link rel="stylesheet" href="css/colors/green.css">
 
 	<!-- Google Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic|Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+	<!--<link href='http://fonts.googleapis.com/css?family=Coda|Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic|Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>-->
+	<link href='http://fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
 
 	<!-- Modernizr to provide HTML5 support for IE. -->
 	<script src="js/modernizr.custom.js"></script>
@@ -67,7 +68,7 @@
 	<header class="sticky" id="header">
 		<div class="container">
 			<div class="row" id="logo_menu">
-				<div class="col-xs-6"><a class="logo" href="">ILLES BALEARS</a></div>
+				<div class="col-xs-6"><a class="logo" href=""><span style="font-family: 'Coda'">ENLIGHTENED</span></a></div>
 				<div class="col-xs-6"><a id="menu-toggle" href="#" class="toggle" role="button" title="Navigation" data-toggle="tooltip" data-placement="left"><i class="ion-navicon"></i></a></div>
 			</div>
 		</div>
@@ -83,7 +84,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="headings">
-						<h1 class="wow animated fadeInDown">ENLIGHTENED</h1>
+						<!--<h1 class="wow animated fadeInDown">ENLIGHTENED</h1>-->
 						<p class="wow animated fadeInLeft">Únete a los Enlightened de Baleares proteger la humanidad utilizando los avances que nos proporciona la XM.</p>
 
 						<a href="#" class="btn btn-store wow animated bounceInUp">
