--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!--favicon-->
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
+	<link rel="icon" href="img/favicon.png" type="image/png">
 	
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
@@ -68,7 +68,7 @@
 	<header class="sticky" id="header">
 		<div class="container">
 			<div class="row" id="logo_menu">
-				<div class="col-xs-6"><a class="logo" href=""><span style="font-family: 'Coda'">ENLIGHTENED</span></a></div>
+				<div class="col-xs-6"><a class="logo" href="">ENLIGHTENED</a></div>
 				<div class="col-xs-6"><a id="menu-toggle" href="#" class="toggle" role="button" title="Navigation" data-toggle="tooltip" data-placement="left"><i class="ion-navicon"></i></a></div>
 			</div>
 		</div>
