--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="keywords" content="Ingress, Enlightened, Balears">
 	<meta name="author" content="Enlightened Illes Balears">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#4bd488">
 
 	<!--favicon-->
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
