--- a/index.html
+++ b/index.html
@@ -184,35 +184,6 @@
     </section>
 
 
-	<!-- ****************************** Video section ************************** -->
-	<section id="video" class="block">
-		<div class="container">
-			
-			<div class="title-box">
-				<h1 class="block-title wow animated zoomIn">
-					<span class="bb-top-left"></span>
-					<span class="bb-bottom-left"></span>
-					Video Preview
-					<span class="bb-top-right"></span>
-					<span class="bb-bottom-right"></span>
-				</h1>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-offset-2 col-sm-8 wow animated bounceInUp">
-					<!-- 16:9 aspect ratio -->
-					<div class="embed-responsive embed-responsive-16by9">
-					  <iframe class="embed-responsive-item async-iframe" data-src="http://player.vimeo.com/video/718489?title=0&amp;byline=0&amp;portrait=0&amp;color=41a1e1" width="560" height="315" allowfullscreen></iframe>
-					</div>
-					<p class="text-center italic">
-						<strong>Use Lucy – the Best Responsive App Landing Page to embed your game’s or app’s review videos.</strong>
-					</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-
 	<!-- ****************************** Big Features section ************************** -->
 	<section id="bigfeatures" class="img-block-3col block">
 
@@ -290,43 +261,120 @@
 			<div class="row">
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX animated">
-						<i class="ion-android-options"></i>
-						<h2>Tune up</h2>
+						<img src="img/items/resonator.png" height="128">
+						<h2>Resonator</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX animated">
-						<i class="ion-android-unlock"></i>
-						<h2>Security</h2>
+						<img src="img/items/xmp.png" height="128">
+						<h2>XMP</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX animated">
-						<i class="ion-nuclear"></i>
-						<h2>Firewall</h2>
+						<img src="img/items/key.png" height="128">
+						<h2>Portal Key</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX animated">
-						<i class="ion-beer"></i>
+						<img src="img/items/shield.png" height="128">
 						<h2>HD Widgets</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX animated">
-						<i class="ion-search"></i>
-						<h2>Data Sync</h2>
+						<img src="img/items/multihack.png" height="128">
+						<h2>Multi-Hack</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX animated">
-						<i class="ion-android-sync"></i>
-						<h2>Customize</h2>
+						<img src="img/items/heatsink.png" height="128">
+						<h2>Heat Sink</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/linkamp.png" height="128">
+						<h2>Link Amp</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/forceamp.png" height="128">
+						<h2>Force Amp</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/turret.png" height="128">
+						<h2>Turret</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/powercube.png" height="128">
+						<h2>Power Cube</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/ada.png" height="128">
+						<h2>ADA Refactor</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/jarvis.png" height="128">
+						<h2>Jarvis Virus</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/ultrastrike.png" height="128">
+						<h2>Ultra Strike</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/capsule.png" height="128">
+						<h2>Capsule</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/axa.png" height="128">
+						<h2>AXA Shield</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/mufg.png" height="128">
+						<h2>MUFG Capsule</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="feature-box wow animated flipInX animated">
+						<img src="img/items/softbank.png" height="128">
+						<h2>SoftBank Ultra Link</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
 				</div>
@@ -613,6 +661,35 @@
 						<span class="subscription-error"></span>
 
 					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- ****************************** Video section ************************** -->
+	<section id="video" class="block">
+		<div class="container">
+
+			<div class="title-box">
+				<h1 class="block-title wow animated zoomIn">
+					<span class="bb-top-left"></span>
+					<span class="bb-bottom-left"></span>
+					Video Preview
+					<span class="bb-top-right"></span>
+					<span class="bb-bottom-right"></span>
+				</h1>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-offset-2 col-sm-8 wow animated bounceInUp">
+					<!-- 16:9 aspect ratio -->
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item async-iframe" data-src="http://player.vimeo.com/video/718489?title=0&amp;byline=0&amp;portrait=0&amp;color=41a1e1" width="560" height="315" allowfullscreen></iframe>
+					</div>
+					<p class="text-center italic">
+						<strong>Use Lucy – the Best Responsive App Landing Page to embed your game’s or app’s review videos.</strong>
+					</p>
 				</div>
 			</div>
 		</div>
