--- a/index.html
+++ b/index.html
@@ -86,19 +86,21 @@
 				<div class="col-md-6">
 					<div class="headings">
 						<!--<h1 class="wow animated fadeInDown">ENLIGHTENED</h1>-->
-						<p class="wow animated fadeInLeft">Únete a los Enlightened de Baleares proteger la humanidad utilizando los avances que nos proporciona la XM.</p>
+						<p class="wow animated fadeInLeft" style="text-align: justify">¡Únete a los Enlightened de Baleares para llevar a la humanidad a un nivel superior utilizando los avances que nos proporciona la materia exótica!</p>
 
-						<a href="#" class="btn btn-store wow animated bounceInUp">
-							<i class="ion-social-apple"></i>
-							<span>Download From</span><br/>
-							App Store
-						</a>
+						<div style="text-align: center">
+							<a href="https://goo.gl/i4IY3h" class="btn btn-store wow animated bounceInUp">
+								<i class="ion-social-apple"></i>
+								<span>Download From</span><br/>
+								App Store
+							</a>
 
-						<a href="#" class="btn btn-store wow animated bounceInUp">
-							<i class="ion-social-android"></i>
-							<span>Download From</span><br/>
-							Play Store
-						</a>
+							<a href="https://goo.gl/ODAwTj" class="btn btn-store wow animated bounceInUp">
+								<i class="ion-social-android"></i>
+								<span>Download From</span><br/>
+								Play Store
+							</a>
+						</div>
 					</div>
 				</div>
 				<div class="col-md-6 hidden-xs hidden-sm">
@@ -169,6 +171,20 @@
                         <div class="col-md-12">
                             <p class="mb50">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+							<div style="text-align: center">
+								<a href="https://goo.gl/i4IY3h" class="btn btn-store wow animated bounceInUp">
+									<i class="ion-social-googleplus"></i>
+									<span>Contacta por</span><br/>
+									Google+
+								</a>
+
+								<a href="https://goo.gl/ODAwTj" class="btn btn-store wow animated bounceInUp">
+									<i class="ion-paper-airplane"></i>
+									<span>Contacta por</span><br/>
+									Telegram
+								</a>
+							</div>
                         </div>
                     </div>
                 </div><!--/col-sm-6-->
@@ -269,7 +285,7 @@
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX animated">
 						<img src="img/items/xmp.png" height="128">
-						<h2>XMP</h2>
+						<h2>XMP Burster</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
 				</div>
@@ -283,7 +299,7 @@
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX animated">
 						<img src="img/items/shield.png" height="128">
-						<h2>HD Widgets</h2>
+						<h2>Portal Shield</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
 				</div>
