--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 
                 <div class="col-sm-4 wow fadeInRight animated">
                     <h2>¿Cómo capturo un portal?</h2>
+                    <img src="img/help/capture.gif" height="128">
                     <p>A mysterious energy has been unearthed by a team of scientists in Europe.
                         The origin and purpose of this force is unknown, but some researchers believe it is
                         influencing the way we think. We must control it or it will control us.</p>
