--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
             <div class="row">
                 <div class="col-sm-4 wow fadeInLeft animated">
-                    <h2>¿Cómo destruyo un portal enemigo?</h2>
+                    <h2>¿Cómo funciona el chat (COMM)?</h2>
                     <p>A mysterious energy has been unearthed by a team of scientists in Europe.
                         The origin and purpose of this force is unknown, but some researchers believe it is
                         influencing the way we think. We must control it or it will control us.</p>
@@ -219,7 +219,7 @@
                 </div><!--/col-sm-4-->
 
                 <div class="col-sm-4 wow fadeInRight animated">
-                    <h2>¿Cómo enlazo dos portales?</h2>
+                    <h2>¿Cuáles son las normas de Ingress?</h2>
                     <p>A mysterious energy has been unearthed by a team of scientists in Europe.
                         The origin and purpose of this force is unknown, but some researchers believe it is
                         influencing the way we think. We must control it or it will control us.</p>
@@ -228,16 +228,48 @@
                     <p>Install Ingress and transform your world.</p>
                 </div><!--/col-sm-4-->
 
-                <div class="col-sm-4 wow fadeInRight animated">
-                    <h2>¿Puedo crear un triángulo?</h2>
-                    <p>A mysterious energy has been unearthed by a team of scientists in Europe.
-                        The origin and purpose of this force is unknown, but some researchers believe it is
-                        influencing the way we think. We must control it or it will control us.</p>
-                    <p>“The Enlightened” seek to embrace the power that this energy may bestow upon us.
-                        “The Resistance” struggle to defend, and protect what’s left of our humanity.</p>
-                    <p>Install Ingress and transform your world.</p>
-                </div><!--/col-sm-4-->
+				<div class="col-sm-4 wow fadeInLeft animated">
+					<h2>¿Cómo destruyo un portal enemigo?</h2>
+					<p>A mysterious energy has been unearthed by a team of scientists in Europe.
+						The origin and purpose of this force is unknown, but some researchers believe it is
+						influencing the way we think. We must control it or it will control us.</p>
+					<p>“The Enlightened” seek to embrace the power that this energy may bestow upon us.
+						“The Resistance” struggle to defend, and protect what’s left of our humanity.</p>
+					<p>Install Ingress and transform your world.</p>
+				</div><!--/col-sm-4-->
             </div><!--/row-->
+
+			<div class="row">
+				<div class="col-sm-4 wow fadeInRight animated">
+					<h2>¿Cómo enlazo dos portales?</h2>
+					<p>A mysterious energy has been unearthed by a team of scientists in Europe.
+						The origin and purpose of this force is unknown, but some researchers believe it is
+						influencing the way we think. We must control it or it will control us.</p>
+					<p>“The Enlightened” seek to embrace the power that this energy may bestow upon us.
+						“The Resistance” struggle to defend, and protect what’s left of our humanity.</p>
+					<p>Install Ingress and transform your world.</p>
+				</div><!--/col-sm-4-->
+
+				<div class="col-sm-4 wow fadeInRight animated">
+					<h2>¿Puedo crear un triángulo (Control Field)?</h2>
+					<p>A mysterious energy has been unearthed by a team of scientists in Europe.
+						The origin and purpose of this force is unknown, but some researchers believe it is
+						influencing the way we think. We must control it or it will control us.</p>
+					<p>“The Enlightened” seek to embrace the power that this energy may bestow upon us.
+						“The Resistance” struggle to defend, and protect what’s left of our humanity.</p>
+					<p>Install Ingress and transform your world.</p>
+				</div><!--/col-sm-4-->
+
+                <div class="col-sm-4 wow fadeInRight animated">
+                    <h2>¿Cómo funcionan los MODs?</h2>
+                    <p>A mysterious energy has been unearthed by a team of scientists in Europe.
+                        The origin and purpose of this force is unknown, but some researchers believe it is
+                        influencing the way we think. We must control it or it will control us.</p>
+                    <p>“The Enlightened” seek to embrace the power that this energy may bestow upon us.
+                        “The Resistance” struggle to defend, and protect what’s left of our humanity.</p>
+                    <p>Install Ingress and transform your world.</p>
+                </div><!--/col-sm-4-->
+			</div><!--/row-->
 
         </div><!--/container-->
     </section>
