--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
 	<!-- meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Balearic Islands Enlightened community.">
+	<meta name="description" content="Balearic Islands Enlightened community, Ingress.">
 	<meta name="keywords" content="Ingress, Enlightened, Balears">
 	<meta name="author" content="Enlightened Illes Balears">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#4bd488">
+	
+	<meta property='og:url' content='http://inicio.iluminadosbaleares.com/'>
+	<meta property='og:type' content='website'>
+	<meta property='og:title' content='Enlightened Illes Balears'>
+	<meta property='og:description' content='Balearic Islands Enlightened community, Ingress.'>
+
+
 
 	<!--favicon-->
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
@@ -340,6 +347,38 @@
 			</div><!--/row-->
 		</div>
 		<!--/container-->
+	</section>
+	
+	<section id="contact" class="block">
+		<div class="container">
+			<div class="title-box">
+				<h1 class="block-title wow animated zoomIn animated" style="visibility: visible; animation-name: zoomIn;">
+					<span class="bb-top-left"></span>
+					<span class="bb-bottom-left"></span>
+						Links de interés
+					<span class="bb-top-right"></span>
+					<span class="bb-bottom-right"></span>
+				</h1>
+			</div>
+			<div class="row">
+				<div class="col-sm-4 col-sm-offset-2 address wow fadeInLeft animated animated" style="visibility: visible; animation-name: fadeInLeft;">
+					<ul class="address-list">
+						<li><i class="ion-earth"></i> <span><a href="https://www.ingress.com/">Web Ingress</a></span></li>
+						<li><i class="ion-map"></i> <span><a href="https://ingress.com/intel">Mapa de Intel</a></span></li>
+						<li><i class="ion-compass"></i> <span><a href="https://mission-author-dot-betaspike.appspot.com/">Misiones</a></span></li>
+						<li><i class="ion-help-circled"></i> <span><a href="https://support.ingress.com/hc/es">Ayuda oficial</a></span></li>
+					</ul>
+				</div>
+				<div class="col-sm-4 address wow fadeInLeft animated animated" style="visibility: visible; animation-name: fadeInLeft;">
+					<ul class="address-list">
+						<li><i class="ion-social-googleplus"></i> <span><a href="https://goo.gl/z6urQm">Comunidad de inicio G+</a></span></li>
+						<li><i class="ion-paper-airplane"></i> <span><a href="https://goo.gl/MgHIW0">Telegram de inicio</a></span></li>
+						<li><i class="ion-social-googleplus"></i> <span><a href="https://plus.google.com/u/0/communities/103131639571394744983">Comunidad privada de G+</a></span></li>
+					</ul>
+				</div>
+			</div><!--/row-->
+		</div>
+		<div class="clearfix"></div>
 	</section>
 
 	<!-- ****************************** Footer ************************** -->
