--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#4bd488">
 	
-	<meta property='og:url' content='http://inicio.iluminadosbaleares.com/'>
+	<meta property='og:url' content='http://iluminadosbaleares.com/'>
 	<meta property='og:type' content='website'>
 	<meta property='og:title' content='Enlightened Illes Balears'>
 	<meta property='og:description' content='Balearic Islands Enlightened community, Ingress.'>
