--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="Ingress, Enlightened, Balears">
 	<meta name="author" content="Enlightened Illes Balears">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="theme-color" content="#4bd488">
+	<meta name="theme-color" content="#072f19">
 	
 	<meta property='og:url' content='http://iluminadosbaleares.com/'>
 	<meta property='og:type' content='website'>
