Actualitzat link tg

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								<br/> Google+
 							</a>
 
-							<a href="https://goo.gl/MgHIW0" class="btn btn-store wow animated bounceInUp">
+							<a href="https://telegram.me/enlmca" class="btn btn-store wow animated bounceInUp">
 								<i class="ion-paper-airplane"></i>
 								<span>Contacta por</span>
 								<br/> Telegram
@@ -372,7 +372,7 @@
 				<div class="col-sm-4 address wow fadeInLeft animated animated" style="visibility: visible; animation-name: fadeInLeft;">
 					<ul class="address-list">
 						<li><i class="ion-social-googleplus"></i> <span><a href="https://goo.gl/z6urQm">Comunidad de inicio G+</a></span></li>
-						<li><i class="ion-paper-airplane"></i> <span><a href="https://goo.gl/MgHIW0">Telegram de inicio</a></span></li>
+						<li><i class="ion-paper-airplane"></i> <span><a href="https://telegram.me/enlmca">Telegram de inicio</a></span></li>
 						<li><i class="ion-social-googleplus"></i> <span><a href="https://plus.google.com/u/0/communities/103131639571394744983">Comunidad privada de G+</a></span></li>
 					</ul>
 				</div>
